@@ -4,8 +4,11 @@ cupt (2.9.9~) UNRELEASED; urgency=medium
     - 'shell': switched to libreadline7 from libreadline6. Patch by
       Sven Joachim. (Closes: #845358)
   * lib:
-    - Fixed pre-parsing versioned provides when all provides for a particular
-      package are versioned.
+    - cache:
+      - Verifying repository signatures: ignore unknown status lines from
+        gpgv.
+      - Fixed pre-parsing versioned provides when all provides for a particular
+        package are versioned.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 17 Dec 2016 17:56:37 +0100
 
